# network-watcher-cli

./: Cargo.toml  README.md
src/: calculate.rs  calculate_apply.rs  check_internet.rs  get_time.rs  main.rs  option.rs  save.rs
src/helper/: calculate_apply.rs  mod.rs  save.rs
src/operations/: calculate.rs  check_internet.rs  get_time.rs  get_wifi_name.rs  mod.rs
test/: save_test.rs
