[package]
name = "network-watcher-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = { version = "0.4" }
clap = { version = "4.5.2", features = ["derive"] }
async-trait = "0.1.77"
futures = "0.3.30"
